# Omniproxy

./: Cargo.toml  LICENSE  README.md
src/: main.rs
src/accounts/: credentials.rs  manager.rs  mod.rs  provider.rs
src/auth/: claude.rs  codex.rs  gemini.rs  mod.rs  pkce.rs
src/cli/: account.rs  mod.rs  models.rs  serve.rs
src/config/: mod.rs
src/providers/: claude.rs  codex.rs  gemini.rs  mod.rs  registry.rs
src/server/: mod.rs  router.rs
