[package]
name = "omniproxy"
version = "0.1.0"
edition = "2021"
description = "Unified API gateway for AI model subscriptions"
license = "MIT"
repository = "https://github.com/kaminoguo/Omniproxy"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive"] }

# OAuth
oauth2 = "5"

# Crypto
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Async utilities
futures = "0.3"
async-trait = "0.1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# File system
dirs = "6"

# URL handling
url = "2"
urlencoding = "2"

# UUID
uuid = { version = "1", features = ["v4"] }

# HTTP body utilities
http-body-util = "0.1"

# Open browser
open = "5"

[profile.release]
lto = true
codegen-units = 1
strip = true
